tests/NormalTests/paczka1/fuzzy1/29487615.err
Error in line 2: RCNze S305 23,2
Error in line 8: KabN2 S305 80,1
Error in line 16: B5rZ S684 -2,0
Error in line 14: B5rZ S684 99,8
Error in line 28: B5rZ A364 59,4
Error in line 26: KabN2 S305 97,7
